feat: interface and adapter
